--- a/views/image.twig
+++ b/views/image.twig
@@ -1,10 +1,19 @@
-{% extends "object_layout.twig" %}
+{# {% extends "object_layout.twig" %}#}
 
-{% block object_content %}
-    <ul class="list-group mt-4">
-        <li class="list-group-item text-center">
-            <img src="{{ image_src }}" alt="{{ image_alt }}" width="{{ image_width }}" height="{{ image_height }}">
-            <p class="mt-2">{{ image_alt }}</p>
-        </li>
-    </ul>
+{#{% block object_content %}#}
+   {# <ul class="list-group mt-4">#}
+       {# <li class="list-group-item text-center">#}
+          {#  <img src="{{ image_src }}" alt="{{ image_alt }}" width="{{ image_width }}" height="{{ image_height }}">#}
+           {# <p class="mt-2">{{ image_alt }}</p>#}
+      {#  </li>#}
+   {# </ul>#}
+{#{% endblock %}#}
+
+{% extends "_layout.twig" %}
+
+{% block layout_content %}
+<div class="container mt-4">
+    <h1>{{ painting.title }}</h1>
+    <img src="{{ painting.image }}" class="img-fluid" alt="{{ painting.title }}">
+</div>
 {% endblock %}
