--- a/views/main.twig
+++ b/views/main.twig
@@ -1,34 +1,28 @@
 {% extends "_layout.twig" %}
 
 {% block layout_content %}
-    <div class="container mt-4">
+<div class="container mt-4">
+    <h1 class="mb-4">Картины</h1>
 
-        {% for book in books %}
-        <div class="mb-4 p-4 bg-light rounded">
-            <a href="{{ book.base_url }}" class="d-block mb-3 btn btn-lg btn-outline-dark text-start p-3">{{ book.name }}</a>
-            <div class="d-flex gap-2">
-                {% for tab in book.tabs %}
-                    <a href="{{ tab.url }}" class="btn btn-sm btn-outline-primary px-3">{{ tab.text }}</a>
-                {% endfor %}
+    <div class="d-flex flex-wrap gap-4 justify-content-start">
+        {% for painting in theninth_wave %}
+        <div class="card shadow-sm" style="width: 18rem; flex: 0 0 auto;">
+            <img src="{{ painting.image }}" class="card-img-top" alt="{{ painting.title }}"
+                 style="width: 100%; height: 200px; object-fit: cover;">
+            <div class="card-body d-flex flex-column">
+                <a href="/theninth_wave/{{ painting.id }}" class="btn btn-primary btn-sm mb-2 text-center" 
+                   style="height: 40px; display: flex; align-items: center; justify-content: center;">
+                    {{ painting.title }}
+                </a>
+                <div class="d-flex gap-2 mt-auto">
+                    <a href="/theninth_wave/{{ painting.id }}/image" class="btn btn-outline-primary btn-sm flex-fill" 
+                       style="height: 35px;">Картинка</a>
+                    <a href="/theninth_wave/{{ painting.id }}/info" class="btn btn-outline-secondary btn-sm flex-fill" 
+                       style="height: 35px;">Описание</a>
+                </div>
             </div>
         </div>
         {% endfor %}
-
-        {% block content %}
-
-        {% for object in theninth_wave %}
-        Название: {{ object.title }} <br>
-        {% endfor %}
-    
-
-        <pre>
-            {{ dump(theninth_wave) }}
-        </pre>
-            <ul class="list-group">
-                <!-- ... -->
-            </ul>
-        {% endblock %}
-
     </div>
+</div>
 {% endblock %}
-
