--- a/views/_layout.twig
+++ b/views/_layout.twig
@@ -5,34 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"  rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 
-    
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
         <a class="navbar-brand" href="/"><i class="fas fa-book-tanakh"></i></a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav me-auto">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Переключить навигацию">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                {% for period in periods %}
                     <li class="nav-item">
-                        <a class="nav-link {% if current_url starts with '/tot' %}active{% endif %}" href="/tot">Книга Тота</a>
+                        <a class="nav-link" href="/?period={{ period.period }}">{{ period.period|title }}</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if current_url starts with '/gigas' %}active{% endif %}" href="/gigas">Кодекс Гигас</a>
-                    </li>
-                </ul>
-            </div>
+                {% endfor %}
+            </ul>
         </div>
-    </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <div class="container mt-4">
+    </div>
+</nav>
+
+<div class="container mt-4">
     {% block layout_content %}
         пусто
     {% endblock %}
-    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
