--- a/views/_layout.twig
+++ b/views/_layout.twig
@@ -22,19 +22,27 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Главная</a>
+                    <a class="nav-link {% if current_page == 'home' %}active{% endif %}" href="/">Главная</a>
                 </li>
                 {% for period in periods %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/?period={{ period.period }}">{{ period.period|title }}</a>
+                        <a class="nav-link {% if active_period == period.period %}active{% endif %}" href="/?period={{ period.period }}">{{ period.period|title }}</a>
                     </li>
                 {% endfor %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/search">Поиск</a>
+                    <a class="nav-link {% if current_page == 'search' %}active{% endif %}" href="/search">Поиск</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/add">Добавить</a>
+                    <a class="nav-link {% if current_page == 'add' %}active{% endif %}" href="/add">Добавить объект</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if current_page == 'add_type' %}active{% endif %}" href="/add_object_type">Добавить тип</a>
+                </li>
+                {% for type in object_types %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if active_type == type.id %}active{% endif %}" href="/?type={{ type.id }}">{{ type.name }}</a>
+                    </li>
+                {% endfor %}
             </ul>
         </div>
     </div>
@@ -45,7 +53,6 @@
         {% block content %}{% endblock %}
     {% endblock %}
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
