--- a/views/main.twig
+++ b/views/main.twig
@@ -2,7 +2,25 @@
 
 {% block layout_content %}
 <div class="container mt-4">
-    <h1 class="mb-4">Картины</h1>
+    <h1 class="mb-4">
+        {% set title = "Картины" %}
+
+        {# Если есть фильтр по периоду #}
+        {% if current_period is defined and current_period %}
+            {% set title = "Период: " ~ current_period|title %}
+        {% endif %}
+
+        {# Если есть фильтр по типу, то ищем название типа #}
+        {% if current_type is defined and current_type %}
+            {% for type in object_types %}
+                {% if type.id == current_type %}
+                    {% set title = "Тип: " ~ type.name %}
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+
+        {{ title }}
+    </h1>
 
     <div class="d-flex flex-wrap gap-4 justify-content-start">
         {% for painting in theninth_wave %}
@@ -10,18 +28,20 @@
             <img src="{{ painting.image }}" class="card-img-top" alt="{{ painting.title }}"
                  style="width: 100%; height: 200px; object-fit: cover;">
             <div class="card-body d-flex flex-column">
-                <a href="/theninth_wave/{{ painting.id }}" class="btn btn-primary btn-sm mb-2 text-center" 
+                <a href="/theninth_wave/{{ painting.id }}" class="btn btn-primary btn-sm mb-2 text-center"
                    style="height: 40px; display: flex; align-items: center; justify-content: center;">
                     {{ painting.title }}
                 </a>
                 <div class="d-flex gap-2 mt-auto">
-                    <a href="/theninth_wave/{{ painting.id }}/image" class="btn btn-outline-primary btn-sm flex-fill" 
+                    <a href="/theninth_wave/{{ painting.id }}/image" class="btn btn-outline-primary btn-sm flex-fill"
                        style="height: 35px;">Картинка</a>
-                    <a href="/theninth_wave/{{ painting.id }}/info" class="btn btn-outline-secondary btn-sm flex-fill" 
+                    <a href="/theninth_wave/{{ painting.id }}/info" class="btn btn-outline-secondary btn-sm flex-fill"
                        style="height: 35px;">Описание</a>
                 </div>
             </div>
         </div>
+        {% else %}
+            <p>Объекты не найдены.</p>
         {% endfor %}
     </div>
 </div>
