--- a/views/main.twig
+++ b/views/main.twig
@@ -24,22 +24,35 @@
 
     <div class="d-flex flex-wrap gap-4 justify-content-start">
         {% for painting in theninth_wave %}
-        <div class="card shadow-sm" style="width: 18rem; flex: 0 0 auto;">
-            <img src="{{ painting.image }}" class="card-img-top" alt="{{ painting.title }}"
-                 style="width: 100%; height: 200px; object-fit: cover;">
-            <div class="card-body d-flex flex-column">
-                <a href="/theninth_wave/{{ painting.id }}" class="btn btn-primary btn-sm mb-2 text-center"
-                   style="height: 40px; display: flex; align-items: center; justify-content: center;">
-                    {{ painting.title }}
-                </a>
-                <div class="d-flex gap-2 mt-auto">
-                    <a href="/theninth_wave/{{ painting.id }}/image" class="btn btn-outline-primary btn-sm flex-fill"
-                       style="height: 35px;">Картинка</a>
-                    <a href="/theninth_wave/{{ painting.id }}/info" class="btn btn-outline-secondary btn-sm flex-fill"
-                       style="height: 35px;">Описание</a>
+            <div class="card shadow-sm position-relative" style="width: 18rem; flex: 0 0 auto;">
+                <div class="position-absolute" style="top: 0; right: 0;">
+                 <form action="/theninth_wave/delete" method="POST">
+    <input type="hidden" name="id" value="{{ painting.id }}">
+    <button type="submit" class="btn btn-danger btn-sm"
+            style="width: 28px; height: 28px; padding: 0;
+                   border-radius: 0; font-size: 16px;
+                   line-height: 1; display: flex;
+                   align-items: center; justify-content: center;">
+        &times;
+    </button>
+</form>
+
+                </div>
+                <img src="{{ painting.image }}" class="card-img-top" alt="{{ painting.title }}"
+                     style="width: 100%; height: 200px; object-fit: cover;">
+                <div class="card-body d-flex flex-column">
+                    <a href="/theninth_wave/{{ painting.id }}" class="btn btn-primary btn-sm mb-2 text-center"
+                       style="height: 40px; display: flex; align-items: center; justify-content: center;">
+                        {{ painting.title }}
+                    </a>
+                    <div class="d-flex gap-2 mt-auto">
+                        <a href="/theninth_wave/{{ painting.id }}/image" class="btn btn-outline-primary btn-sm flex-fill"
+                           style="height: 35px;">Картинка</a>
+                        <a href="/theninth_wave/{{ painting.id }}/info" class="btn btn-outline-secondary btn-sm flex-fill"
+                           style="height: 35px;">Описание</a>
+                    </div>
                 </div>
             </div>
-        </div>
         {% else %}
             <p>Объекты не найдены.</p>
         {% endfor %}
