--- a/views/__object.twig
+++ b/views/__object.twig
@@ -1,6 +1,12 @@
 {% extends "_layout.twig" %}
 
 {% block layout_content %}
+
+
+<h1>{{name}}</h1>
+	<div>
+		{{description}}
+	</div>
 <div class="container mt-4">
     <h1 class="mb-4">{{ painting.title }}</h1>
 
