--- a/views/_layout.twig
+++ b/views/_layout.twig
@@ -54,14 +54,17 @@
                     </li>
                 {% endfor %}
 
+                {# Кнопка выхода, если пользователь вошёл #}
+                {% if is_logged %}
                 <li class="nav-item">
-                    <form action="/logout" method="post" class="d-inline">
+                    <form action="/logout" method="get" class="d-inline">
                         <button type="submit" class="btn btn-outline-danger">Выйти</button>
                     </form>
                 </li>
+                {% endif %}
             </ul>
 
-            {# Форма отправки welcome-сообщения #}
+            {# Форма welcome-сообщения #}
             <form action="/set_welcome" method="get" class="d-flex ms-3">
                 <input type="text" name="message" class="form-control me-2" placeholder="Сообщение">
                 <button type="submit" class="btn btn-primary">OK</button>
@@ -74,8 +77,8 @@
     {% block layout_content %}{% endblock %}
 </div>
 
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<pre>is_logged: {{ is_logged is defined ? is_logged : 'не определено' }}</pre>
+
 </body>
 </html>
